# Seabattle

./: Maltsev_Kirill_lb1.docx  README.md
Battleship/: CMakeCache.txt  CMakeLists.txt  Makefile  battleship  cmake_install.cmake  run.bat  uml.dot
Battleship/include/: CLIRenderer.hpp  Coords.hpp  GUIRenderer.hpp  Game.hpp  GameMap.hpp  GameMapViewModel.hpp  GameRenderer.hpp  HitBox.hpp  Ship.hpp  ShipManager.hpp  collision_handler.h  collision_handler.hpp  coords.h  coords.hpp  entity.h  entity.hpp  game_field.h  game_field.hpp  game_map.hpp  game_renderer.h  game_renderer.hpp  ship.h  ship.hpp  ship_manager.h  ship_manager.hpp
Battleship/src/: CLIRenderer.cpp  Coords.cpp  GUIRenderer.cpp  GameMap.cpp  GameMapViewModel.cpp  GameRenderer.cpp  Ship.cpp  ShipManager.cpp  collision_handler.cpp  coords.cpp  entity.cpp  game_field.cpp  game_map.cpp  game_renderer.cpp  main.cpp  ship.cpp  ship_manager.cpp
Seabattle/: CMakeLists.txt  Maltsev_Kirill_lb3.docx  Maltsev_Kirill_lb4.docx  build.bat  lb3.dot  lb4.dot  run.bat
Seabattle/dll/: dll.rar
Seabattle/include/: Coords.hpp  Game.hpp  GameController.hpp  GameData.hpp  GameDataHandler.hpp  GameMap.hpp  GameMapViewModel.hpp  GameObserver.hpp  GamePhase.hpp  SFML.rar  Ship.hpp  ShipsManager.hpp
Seabattle/include/Abilities/: AbilitiesManager.hpp  AbilityFactory.hpp  AbilityType.hpp  Bombing.hpp  BombingSpec.hpp  DoubleDamage.hpp  DoubleDamageSpec.hpp  Scanner.hpp  ScannerSpec.hpp  iAbility.hpp  iAbilitySpec.hpp
Seabattle/include/Actions/: Action.hpp  ApplyBombing.hpp  ApplyDoubleDamage.hpp  ApplyScanner.hpp  Attack.hpp  InformAboutReadiness.hpp  Load.hpp  PlaceShipsRandomly.hpp  Save.hpp  SetSettings.hpp  Stop.hpp
Seabattle/include/Displayers/: CLIDisplayer.hpp  CLIGameMapDisplayer.hpp  GUIDisplayer.hpp
Seabattle/include/Exceptions/: AbilityIsAlreadyUsedException.hpp  ActionException.hpp  AttackException.hpp  FileException.hpp  GameException.hpp  ListenerException.hpp  NoAbilitiesException.hpp  ShipPlacementException.hpp  ShipsAreNotPlacedException.hpp
Seabattle/include/Listeners/: CLIListener.hpp
Seabattle/lib/: lib.rar  sfml-audio-d.lib
Seabattle/src/: Coords.cpp  Game.cpp  GameController.cpp  GameData.cpp  GameDataHandler.cpp  GameMap.cpp  GameMapViewModel.cpp  GameObserver.cpp  Ship.cpp  ShipsManager.cpp  main.cpp
Seabattle/src/Abilities/: AbilitiesManager.cpp  AbilityFactory.cpp  Bombing.cpp  BombingSpec.cpp  DoubleDamage.cpp  DoubleDamageSpec.cpp  Scanner.cpp  ScannerSpec.cpp
Seabattle/src/Actions/: Action.cpp  ApplyBombing.cpp  ApplyDoubleDamage.cpp  ApplyScanner.cpp  Attack.cpp  InformAboutReadiness.cpp  Load.cpp  PlaceShipsRandomly.cpp  Save.cpp  SetSettings.cpp  Stop.cpp
Seabattle/src/Displayers/: CLIDisplayer.cpp  CLIGameMapDisplayer.cpp  GUIDisplayer.cpp
Seabattle/src/Exceptions/: AbilityIsAlreadyUsedException.cpp  ActionException.cpp  AttackException.cpp  FileException.cpp  GameException.cpp  ListenerException.cpp  NoAbilitiesException.cpp  ShipPlacementException.cpp  ShipsAreNotPlacedException.cpp
Seabattle/src/Listeners/: CLIListener.cpp
